# todoqueue-app

./: LICENSE  README.md  build.bat  pyproject.toml  todo_queue_app.py
scripts/: build.ps1
src/todoqueue/: __init__.py  main.py
